--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "xAmp",
+	"product_string": "xAmp",
 	"description": "Youtube music player",
 	"version": "0.4.0",
 	"main": "app.html",
