--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "xAmp",
+	"name": "xamp",
 	"product_string": "xAmp",
 	"description": "Youtube music player",
-	"version": "0.5.1",
+	"version": "0.5.2",
 	"main": "app.html",
 	"dependencies": {
 	},
